fixed bubble size on small screens

--- a/src/styles/_bubble.scss
+++ b/src/styles/_bubble.scss
@@ -2,6 +2,12 @@
 
 .bubbleWrapper {
   width: 320px;
+  @media (max-width: 380px) {
+    width: 280px;
+  }
+  @media (max-width: 330px) {
+    width: 230px;
+  }
   height: fit-content;
   display: "flex";
   box-shadow: 0 2px 22px 0 rgba(0, 0, 0, 0.35), 0 2px 22px 0 rgba(0, 0, 0, 0.2);
